--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,8 @@ select {
 
 header {
   position: fixed;
-  width: 100%; }
+  width: 100%;
+  z-index: 2; }
 
 .burger {
   display: none;
@@ -199,7 +200,7 @@ nav {
       background: #5AC8FA; }
 
 .content {
-  height: 120vh;
+  height: 100vh;
   background: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,7 +209,8 @@ nav {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  z-index: 1; }
   .content_box {
     text-align: center;
     padding-top: 50px;
@@ -224,7 +226,7 @@ nav {
       padding: 5px;
       font-size: 14px; }
 
-.content_box.active {
+.content.active {
   position: relative;
   right: -300px; }
 
